--- a/OrderMatchingEngine.Tests/OrderMatchingEngine.Tests.csproj
+++ b/OrderMatchingEngine.Tests/OrderMatchingEngine.Tests.csproj
@@ -4,11 +4,19 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="8.2.0" />
-    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="Microsoft.TestPlatform" Version="17.10.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -16,5 +24,5 @@
     <ProjectReference Include="..\OrderMatchingEngine.DataAccess\OrderMatchingEngine.DataAccess.csproj" />
     <ProjectReference Include="..\OrderMatchingEngine.Domain\OrderMatchingEngine.Domain.csproj" />
   </ItemGroup>
-
+ 
 </Project>
